src/pages/messaging/agent-chat-api/v3.7/data-structures/index.mdx
---
weight: 22
category: "messaging"
subcategory: "agent-chat-api"
title: "Data structures"
tagline: "The reference of LiveChat data structures."
desc: "The reference of LiveChat data structures. Here, you can review the event and user objects, as well as other common structures."
apiVersion: "3.7"
robots: "noindex"
---

This document contains a reference of data structures available in the LiveChat Agent Chat API. Here, you can review the object fields, as well as sample responses for the [event](#events), [user](#users), and [other common structures](#other-common-structures). The reference applies both to the **Web** and **RTM APIs**.

# Events

One of the data structures are **events**. They are sent to a chat via the `send_event` method.
Apart from events, there are also [Properties](#properties), [Users](#users), and [Other common data structures](#other-common-structures).

These are the available **event types**:

- [File](#file)
- [Form](#form)
- [Filled form](#filled-form)
- [Message](#message)
- [Rich message](#rich-message)
- [Custom](#custom)
- [System message](#system-message)
- [System](#system)

## File

<Section>
<Text>

The **File** event indicates about an uploaded file.

### Request

| Parameter          | Required | Data type |                                                                                                                                     Notes |
| ------------------ | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------: |
| `custom_id`        | no       | `string`  |                                                                                                                                           |
| `type`             | yes      | `string`  |                                                                                                                                    `file` |
| `visibility`       | no       | `string`  |                                                                                                Possible values: `all` (default), `agents` |
| `properties`       | no       | `object`  |                                                                                                                 [Properties](#properties) |
| `url`              | yes      | `string`  | Has to point to the LiveChat CDN. It's recommended to use the URL returned by [`upload_file`](/messaging/customer-chat-api/#upload-file). |
| `alternative_text` | no       | `string`  |                                                                                                                 Only applicable to images |

### Response

| Field                              | Returned        |                                                                                           Notes |
| ---------------------------------- | :-------------- | ----------------------------------------------------------------------------------------------: |
| `id`                               | always          |                                                                                                 |
| `custom_id`                        | optionally      |                                                                                                 |
| `created_at`                       | always          |                             Date & time format with a resolution of microseconds, `UTC string`. |
| `type`                             | always          |                                                                                                 |
| `author_id`                        | always          |                                                                                                 |
| `visibility`                       | always          |                                                                                                 |
| `properties`                       | optionally      |                                                                                                 |
| `name`                             | always          |                                                                                                 |
| `url`                              | always          |                                                                                                 |
| `thumbnail_url`, `thumbnail2x_url` | only for images |                                                                                                 |
| `content_type`                     | always          |                                                                                                 |
| `size`, `width`, `height`          | only for images |                                                                                                 |
| `alternative_text`                 | only for images |                                                                                                 |
| `deleted`                          | optionally      | Appears for deleted events, visible only to users with the `administrator` or `viceowner` role. |

</Text>
<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample File in response'} json="file"/>
</Code>
</Section>

## Form

<Section>
<Text>

The **Form** event contains an empty form to be filled out by the customer. It doesn't matter how the form is configured or what fields it has – it can be any event of type `form`. Currently, the **Form** events are not supported natively in the LiveChat app, but you can leverage this feature in a custom chatting solution.

### Request

| Field        | Required | Data type | Notes                                                                    |
| ------------ | -------- | --------- | ------------------------------------------------------------------------ |
| `custom_id`  | no       | `string`  |                                                                          |
| `type`       | yes      | `string`  | `form`                                                                   |
| `visibility` | no       | `string`  | Possible values: `all` (default), `agents`                               |
| `properties` | no       | `object`  | [Properties](#properties)                                                |
| `form_id`    | yes      | `string`  |                                                                          |
| `fields`     | yes      | `array`   | The fields a form contains. See [form fields](#form-fields) for details. |

### Response

| Field        | Returned   | Notes                                                                                                                                                                                                                                                                                        |
| ------------ | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `id`         | always     |                                                                                                                                                                                                                                                                                              |
| `custom_id`  | optionally |                                                                                                                                                                                                                                                                                              |
| `created_at` | always     | Date & time format with a resolution of microseconds, `UTC string`.                                                                                                                                                                                                                          |
| `type`       | always     |                                                                                                                                                                                                                                                                                              |
| `author_id`  | always     |                                                                                                                                                                                                                                                                                              |
| `visibility` | always     |                                                                                                                                                                                                                                                                                              |
| `properties` | optionally |                                                                                                                                                                                                                                                                                              |
| `form_id`    | always     |                                                                                                                                                                                                                                                                                              |
| `form_type`  | optionally | The most popular form types include: `prechat`, `postchat`, `ask_for_email`, but those aren’t the only possible options. If you don’t see this field in a chat, it means that chat had been started before we introduced this field (see [Changelog](/messaging/agent-chat-api/changelog/)). |
| `fields`     | always     | An array of [form fields](#form-fields)                                                                                                                                                                                                                                                      |
| `deleted`    | optionally | Appears for deleted events, visible only to users with the `administrator` or `viceowner` role.                                                                                                                                                                                              |

**A sample use case:** sending a form in the chat after a pre-determined agent's inactivity period. This could be a way of gathering contact info from customers so that the overloaded agent can contact them later.

<div style={{maxWidth: "300px"}}>
  <img src="/images/messaging/form-event-image.png" alt="Gather contact info with LiveChat form event"  width="300px" height="560px"/>
</div>

</Text>

<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample Form in response'} json="form"/>
</Code>
</Section>

## Filled form

<Section>
<Text>

The **Filled form** event contains data from a form (prechat or postchat survey).

### Request

| Field        | Required | Data type | Notes                                                                                  |
| ------------ | -------- | --------- | -------------------------------------------------------------------------------------- |
| `custom_id`  | no       | `string`  |                                                                                        |
| `type`       | yes      | `string`  | `filled_form`                                                                          |
| `visibility` | no       | `string`  | Possible values: `all` (default), `agents`                                             |
| `properties` | no       | `object`  | [Properties](#properties)                                                              |
| `form_id`    | yes      | `string`  |                                                                                        |
| `fields`     | yes      | `array`   | The fields a form contains. See [filled form fields](#filled-form-fields) for details. |

### Response

| Field        | Returned   | Notes                                                                                                                                                                                                                                                                                        |
| ------------ | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `id`         | always     |                                                                                                                                                                                                                                                                                              |
| `custom_id`  | optionally |                                                                                                                                                                                                                                                                                              |
| `created_at` | always     | Date & time format with a resolution of microseconds, `UTC string`.                                                                                                                                                                                                                          |
| `type`       | always     |                                                                                                                                                                                                                                                                                              |
| `author_id`  | always     |                                                                                                                                                                                                                                                                                              |
| `visibility` | always     |                                                                                                                                                                                                                                                                                              |
| `properties` | optionally |                                                                                                                                                                                                                                                                                              |
| `form_id`    | always     |                                                                                                                                                                                                                                                                                              |
| `form_type`  | optionally | The most popular form types include: `prechat`, `postchat`, `ask_for_email`, but those aren’t the only possible options. If you don’t see this field in a chat, it means that chat had been started before we introduced this field (see [Changelog](/messaging/agent-chat-api/changelog/)). |
| `fields`     | always     | The fields a form contains. See [filled form fields](#filled-form-fields) for details.                                                                                                                                                                                                       |
| `deleted`    | optionally | Appears for deleted events, visible only to users with the `administrator` or `viceowner` role.                                                                                                                                                                                              |

</Text>

<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample Filled form in response'} json="filledForm"/>
</Code>
</Section>

## Message

<Section>
<Text>

The **Message** event contains text message to other chat users.

### Request

| Parameter                       | Required | Data type | Notes                                                                                                                        |
| ------------------------------- | -------- | --------- | ---------------------------------------------------------------------------------------------------------------------------- |
| `custom_id`                     | no       | `string`  |                                                                                                                              |
| `text`                          | yes      | `string`  | Max. raw text size is 16 KB (one UTF-8 char like emoji 😁 can use up to 4 B); to send more, split text into several messages. |
| `type`                          | yes      | `string`  | `message`                                                                                                                    |
| `visibility`                    | no       | `string`  | Possible values: `all` (default), `agents`                                                                                   |
| `properties`                    | no       | `object`  | [Properties](#properties)                                                                                                    |
| `postback`                      | no       | `object`  | Indicates that the message event was generated in response to a rich message event.                                          |
| `postback.id`                   | yes      | `string`  | ID of the postback from the rich message event.                                                                              |
| `postback.thread_id`            | yes      | `string`  | ID of the thread with the rich message event.                                                                                |
| `postback.event_id`             | yes      | `string`  | ID of the rich message event.                                                                                                |
| `postback.type`                 | no       | `string`  | Should be used together with `postback.value` (when  one of them is present, the other is required).                         |
| `postback.value`                | no       | `string`  | Should be used together with `postback.type` (when  one of them is present, the other is required).                          |
| `postback.ecommerce`            | no       | `object`  | Object containing data specific to rich messages with `ecommerce` template, like `product_id`.                               |
| `postback.ecommerce.product_id` | no       | `string`  | The ID of the product displayed by the rich message. Required when sending `postback.ecommerce`.                             |
| `postback.ecommerce.option_id`  | no       | `string`  | The ID of the selected option for the product.                                                                               |
| `postback.ecommerce.quantity`   | no       | `number`  | Quantity of the product.                                                                                                     |

### Response

| Field                           | Returned   | Notes                                                                                           |
| ------------------------------- | ---------- | ----------------------------------------------------------------------------------------------- |
| `id`                            | always     |                                                                                                 |
| `custom_id`                     | optionally |                                                                                                 |
| `created_at`                    | always     | Date & time format with a resolution of microseconds, `UTC string`.                             |
| `type`                          | always     | `message`                                                                                       |
| `author_id`                     | always     |                                                                                                 |
| `visibility`                    | always     |                                                                                                 |
| `text`                          | always     |                                                                                                 |
| `postback`                      | optionally | Appears in a message only when triggered by a rich message.                                     |
| `postback.id`                   | always     |                                                                                                 |
| `postback.thread_id`            | always     |                                                                                                 |
| `postback.event_id`             | always     |                                                                                                 |
| `postback.type`                 | optionally | Appears only if `postback.value` is present.                                                    |
| `postback.value`                | optionally | Appears only if `postback.type` is present.                                                     |
| `postback.ecommerce`            | optionally |                                                                                                 |
| `postback.ecommerce.product_id` | optionally |                                                                                                 |
| `postback.ecommerce.option_id`  | optionally |                                                                                                 |
| `postback.ecommerce.quantity`   | optionally |                                                                                                 |
| `properties`                    | optionally | [Properties](#properties)                                                                       |
| `deleted`                       | optionally | Appears for deleted events, visible only to users with the `administrator` or `viceowner` role. |

</Text>
<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample Message in response'} json="message"/>
</Code>
</Section>

## Rich message

<Section>
<Text>

Rich message (RM) event contains a rich message data structure. [Read more](/extending-ui/extending-chat-widget/rich-messages/) about rich messages.

### Request

| Parameter                                        | Required | Data type | Notes                                                                                                                                                                                                                                            |
| ------------------------------------------------ | -------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `custom_id`                                      | no       | `string`  | You can give your RM a custom ID.                                                                                                                                                                                                                |
| `type`                                           | yes      | `string`  | Event type: `rich_message`                                                                                                                                                                                                                       |
| `visibility`                                     | no       | `string`  | Possible values: `all` (default), `agents`                                                                                                                                                                                                       |
| `properties`                                     | no       | `object`  | The [properties](#properties) data structure                                                                                                                                                                                                     |
| `template_id`                                    | yes      | `string`  | Defines how every Rich Message will be presented. Values: `cards`, `sticker`, `quick_replies` or `ecommerce`.                                                                                                                                    |
| `elements`                                       | no       | `array`   | Can contain up to 10 `element` objects.                                                                                                                                                                                                          |
| `elements.title`                                 | no       | `string`  | Displays formatted text on RMs.                                                                                                                                                                                                                  |
| `elements.subtitle`                              | no       | `string`  | Displays formatted text on RMs.                                                                                                                                                                                                                  |
| `elements.image`                                 | no       | `image`   | Displays images on RMs. Required param: `url`; Optional params: `name`, `content_type`, `size`, `width`, `height`, `alternative_text`.                                                                                                           |
| `elements.buttons`                               | no       | `array`   | Displays buttons. Can contain up to 13 `button` objects.                                                                                                                                                                                         |
| `elements.buttons.text`                          | yes      | `string`  | Text displayed on a button.                                                                                                                                                                                                                      |
| `elements.buttons.type`                          | yes      | `string`  | Defines the behavior after a user clicks the button. Should be used together with `elements.buttons.value`. Possible values: `webview`, `message`, `url`, `phone`. [More...](/extending-ui/extending-chat-widget/rich-messages/#getting-started) |
| `elements.buttons.value`                         | yes      | `string`  | Should be used together with `elements.buttons.type`. You can use this field to give the rich message of a `webview` type (a Moment) a custom title. [More...](/extending-chat-widget/chat-widget-moments/#how-to-start)                         |
| `elements.buttons.webview_height`                | yes      | `string`  | Required only for the `webview` button`type`. Possible values: `compact`, `full`, `tall`.                                                                                                                                                        |
| `elements.buttons.postback_id`                   | yes      | `string`  | A description of the sent action. Describes the action sent via `send_rich_message_postback`. [More...](/extending-ui/extending-chat-widget/rich-messages/#getting-started)                                                                      |
| `elements.buttons.user_ids`                      | yes      | `array`   | Describes users that sent the postback with `"toggled": true`.                                                                                                                                                                                   |
| `elements.buttons.target`                        | no       | `string`  | Should be used for the `url` button `type`. Specifies if the URL should open in the current or a new tab. Possible values: `new`, `current`.                                                                                                     |
| `elements.ecommerce`                             | no       | `object`  | Should be used for the `ecommerce` template. Contains information about displayed product and its variants.                                                                                                                                      |
| `elements.ecommerce.view_type`                   | no       | `string`  | Defines how the product and its options are displayed. Possible values: `tags`, `swatch`, `images`, `select`. Required when sending `elements.ecommerce`.                                                                                        |
| `elements.ecommerce.product_id`                  | no       | `string`  | Required when sending `elements.ecommerce`.                                                                                                                                                                                                      |
| `elements.ecommerce.label`                       | no       | `string`  |                                                                                                                                                                                                                                                  |
| `elements.ecommerce.options`                     | no       | `array`   | Array of options for product. Required string params: `option_id`, `label`. Optional string params: `price`, `regular_price`, `currency`, `color`, `image_url`, `image_thumbnail_url`. Optional boolean params: `available`, `selected`.         |
| `elements.ecommerce.addons`                      | no       | `array`   | Array of addons for product. Required string param: `addon_type`. Optional string params: `range_from`, `range_to`, `currency`.                                                                                                                  |

### Response

| Field                                            | Returned   | Notes                                                                                                                                                                   |
| ------------------------------------------------ | ---------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `id`                                             | always     | Generated server-side                                                                                                                                                   |
| `custom_id`                                      | optionally |                                                                                                                                                                         |
| `type`                                           | always     |                                                                                                                                                                         |
| `author_id`                                      | always     | Generated server-side                                                                                                                                                   |
| `created_at`                                     | always     | Date & time format with a resolution of microseconds, `UTC string`. Generated server-side.                                                                              |
| `visibility`                                     | always     |                                                                                                                                                                         |
| `properties`                                     | optionally |                                                                                                                                                                         |
| `template_id`                                    | always     |                                                                                                                                                                         |
| `elements`                                       | optionally |                                                                                                                                                                         |
| `elements.title`                                 | optionally |                                                                                                                                                                         |
| `elements.subtitle`                              | optionally |                                                                                                                                                                         |
| `elements.image`                                 | optionally | When present contains param: `url`; Optional params: `name`, `content_type`, `size`, `width`, `height`, `alternative_text`                                              |
| `elements.buttons`                               | optionally |                                                                                                                                                                         |
| `elements.buttons.text`                          | always     |                                                                                                                                                                         |
| `elements.buttons.type`                          | always     |                                                                                                                                                                         |
| `elements.buttons.value`                         | always     |                                                                                                                                                                         |
| `elements.buttons.webview_height`                | optionally | Unless button `type` is different than `webview`.                                                                                                                       |
| `elements.buttons.postback_id`                   | always     |                                                                                                                                                                         |
| `elements.buttons.user_ids`                      | always     |                                                                                                                                                                         |
| `elements.buttons.target`                        | optionally |                                                                                                                                                                         |
| `elements.ecommerce`                             | optionally | This element is only present for rich messages with `template_id` set to `ecommerce`.                                                                                   |
| `elements.ecommerce.view_type`                   | optionally | Can be either `tags`, `swatch`, `images` or `select`.                                                                                                                   |
| `elements.ecommerce.product_id`                  | optionally |                                                                                                                                                                         |
| `elements.ecommerce.label`                       | optionally |                                                                                                                                                                         |
| `elements.ecommerce.options`                     | optionally | Each option consists of `option_id`, `label` and optionally `price`, `regular_price`, `currency`, `color`, `image_url`, `image_thumbnail_url`, `available`, `selected`. |
| `elements.ecommerce.addons`                      | optionally | Each addon consists of `addon_type` and optionally `range_from`, `range_to`, `currency`.                                                                                |

</Text>
<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample Rich message in response'} json="richMessage"/>
</Code>
</Section>

## Custom

<Section>
<Text>

Custom event is an event with customizable payload.

### Request

| Parameter    | Required | Data type | Notes                                        |  |
| ------------ | -------- | --------- | -------------------------------------------- |
| `custom_id`  | no       | `string`  | You can give the event a custom ID.          |
| `type`       | yes      | `string`  | Event type: `custom`                         |
| `content`    | no       | `object`  | The content you define                       |
| `visibility` | no       | `string`  | Possible values: `all` (default), `agents`   |
| `properties` | no       | `object`  | The [properties](#properties) data structure |

### Response

| Field        | Returned   | Notes                                                                                           |
| ------------ | ---------- | ----------------------------------------------------------------------------------------------- |
| `id`         | always     | Generated server-side                                                                           |
| `custom_id`  | optionally |                                                                                                 |
| `type`       | always     |                                                                                                 |
| `author_id`  | always     | Generated server-side                                                                           |
| `created_at` | always     | Date & time format with a resolution of microseconds, `UTC string`; generated server-side       |
| `content`    | optionally |                                                                                                 |
| `visibility` | always     |                                                                                                 |
| `properties` | optionally |                                                                                                 |
| `deleted`    | optionally | Appears for deleted events, visible only to users with the `administrator` or `viceowner` role. |

</Text>
<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample Custom event in response'} json="custom"/>
</Code>
</Section>

## System message

<Section>
<Text>

System message event is native system event sent in specific situations.

### Request

| Parameter             | Required | Data type | Notes                                                                                                                            |
| --------------------- | -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------- |
| `custom_id`           | no       | `string`  | You can give the system message a custom ID.                                                                                     |
| `type`                | yes      | `string`  | `system_message`                                                                                                                 |
| `text`                | no       | `string`  | Text displayed to recipients                                                                                                     |
| `system_message_type` | yes      | `string`  | [System message type](/messaging/references/system-activities#system-messages)                                                   |
| `visibility`          | no       | `string`  | It can be specified when sending system messages via the [**Send Event**](#send-event) method. Possible values: `all`, `agents`. |
| `text_vars`           | no       | `object`  | Variables used in the text                                                                                                       |

### Response

| Field                 | Returned   | Notes                                                                                     |
| --------------------- | ---------- | ----------------------------------------------------------------------------------------- |
| `id`                  | always     | Generated server-side                                                                     |
| `custom_id`           | optionally |                                                                                           |
| `type`                | always     |                                                                                           |
| `created_at`          | always     | Date & time format with a resolution of microseconds, `UTC string`; generated server-side |
| `text`                | optionally |                                                                                           |
| `system_message_type` | always     |                                                                                           |
| `visibility`          | always     |                                                                                           |

</Text>

<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample System message in response'} json="systemMessage"/>
</Code>
</Section>

## System

<Section>
<Text>

System event is an extension and a future replacement for [System message](#system-message). Similarly, it is a native system event sent in specific situations.

### Request

It is not possible to send a System event in API version 3.7.

### Response

| Field        | Returned   | Notes                                                                                     |
| ------------ | ---------- | ----------------------------------------------------------------------------------------- |
| `id`         | always     | Generated server-side                                                                     |
| `custom_id`  | optionally |                                                                                           |
| `source`     | always     | [System event source](/messaging/references/system-activities#system-events)              |
| `type`       | always     | `system`                                                                                  |
| `subtype`    | always     | [System event subtype](/messaging/references/system-activities#system-events)             |
| `version`    | always     |                                                                                           |
| `details`    | always     |                                                                                           |
| `created_at` | always     | Date & time format with a resolution of microseconds, `UTC string`; generated server-side |
| `visibility` | always     |                                                                                           |

</Text>
<Code>
<CodeResponse version="v3.7" type="agent" title={'Sample System event in response'} json="system"/>
</Code>
</Section>

# Users

**Users** are another important data structure. Within this data structure type, we can distinguish:

- [Agent](#agent)
  - [My profile](#my-profile)
- [Customer](#customer)

## Agent

<CodeResponse version="v3.7" type="agent" title={'Sample Agent data structure'} json="agent"/>

| Field        | Req./Opt. | Notes                              |
| ------------ | --------- | ---------------------------------- |
| `visibility` | required  | Possible values: `all` or `agents` |

### My profile

<CodeResponse version="v3.7" type="agent" title={'Sample My profile data structure'} json="myProfile"/>

| Field               | Req./Opt. | Notes                                                                                                                           |
| ------------------- | --------- | ------------------------------------------------------------------------------------------------------------------------------- |
| `routing_status`    | optional  |                                                                                                                                 |
| `events_seen_up_to` | optional  | RFC 3339 datetime string; the timestamp of the most recent event seen by the agent—all the previous events are considered seen. |

## Customer

<CodeResponse version="v3.7" type="agent" title={'Sample Customer data structure'} json="customer"/>

| Field                            | Req./Opt. | Notes                                                                                                                                                     |
| -------------------------------- | --------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `agent_last_event_created_at`    | optional  |                                                                                                                                                           |
| `avatar`                         | optional  |                                                                                                                                                           |
| `customer_last_event_created_at` | optional  |                                                                                                                                                           |
| `created_at`                     | optional  |                                                                                                                                                           |
| `email`                          | optional  |                                                                                                                                                           |
| `email_verified`                 | optional  | Specifies if the customer confirmed their email address. See [Request Email Verification](/messaging/customer-chat-api/v3.7/#request-email-verification). |
| `suggested_email`                | optional  | The email address suggested for the customer based on tracked activity, such as a form submission. The suggested email isn't confirmed by the customer and isn't used for identity merging or segmentation.                                    |
| `session_fields`                 | optional  | An array of custom object-enclosed key-value pairs. Expires along with the session.                                                                       |
| `name`                           | optional  |                                                                                                                                                           |
| `phone_number`                   | optional  |                                                                                                                                                           |
| `events_seen_up_to`              | optional  | RFC 3339 datetime string                                                                                                                                  |
| `visit`                          | optional  |                                                                                                                                                           |
| `present`                        | optional  |                                                                                                                                                           |
| `statistics`                     | optional  |                                                                                                                                                           |
| `carts`                          | optional  | An array of customer's shopping carts. See [Cart](#cart) for the object structure.                                                                        |
| `omnichannel`                    | optional  |                                                                                                                                                           |
| `address`                        | optional  | An object of the customer's address data.                                                                                                                 |
| `customer_properties`            | optional  | An object where the keys are the IDs of the [customer properties](#customer-property) and the values are their data.                                      |
| `relationship_level`             | optional  | The customer's relationship level. The only supported value is `vip`. Returned only if set.                                                               |
| `segment_memberships`            | optional  | An array of the customer's [segment memberships](#segment-membership).                                                                                    |

### Cart

<CodeResponse version="v3.7" type="agent" title={'Sample Cart data structure'} json="cart"/>

| Field               | Data type          | Notes                                          |
| ------------------- | ------------------ | ---------------------------------------------- |
| `store_uuid`        | `string`           | The unique identifier of the store.            |
| `store_platform`    | `string`           | The platform of the store (e.g., `shopify`).   |
| `customer_signed_in`| `bool`             | Whether the customer is signed in.             |
| `subtotal`          | `float`            | Cart subtotal in the original currency.        |
| `total`             | `float`            | Cart total in the original currency.           |
| `subtotal_usd`      | `float`            | Cart subtotal converted to USD.                |
| `total_usd`         | `float`            | Cart total converted to USD.                   |
| `currency`          | `string`           | The currency code (e.g., `USD`, `EUR`).        |
| `items`             | `array of objects` | An array of [Cart Item](#cart-item) objects.    |
| `last_updated_at`   | `string`           | RFC 3339 datetime string.                      |

### Cart Item

<CodeResponse version="v3.7" type="agent" title={'Sample Cart Item data structure'} json="cartItem"/>

| Field        | Data type          | Notes                                     |
| ------------ | ------------------ | ----------------------------------------- |
| `id`         | `number`           | The item ID.                              |
| `quantity`   | `number`           | The quantity of the item in the cart.      |
| `variant_id` | `number`           | The variant ID of the item.               |

### Customer Property

Customer properties are identified by the UUID generated in the [Create customer property definition](/management/customer-data-platform-api#/paths/~1v1~1create_customer_property_definition/post) method.
The customer property's type is set on creation by the agent.

<CodeResponse version="v3.7" type="agent" title={'Sample Customer Property data structure'} json="customerProperty"/>

| Field                           | Req./Opt. | Data type | Notes                                                                                      |
| ------------------------------- | --------- | --------- | ------------------------------------------------------------------------------------------ |
| `value`                         | required  | `any`     | The current value of the property. The type is defined by the `CustomerPropertyType` enum. |
| `last_updated_at`               | required  | `string`  | RFC 3339 datetime string.                                                                  |
| `last_updated_agent_account_id` | optional  | `string`  | Account ID of the agent that last set this value.                                          |
| `last_updated_agent_client_id`  | optional  | `string`  | Client ID of the application that last set this value.                                     |

### Segment Membership

Segment memberships describe which segments the customer belongs to. A segment is a named rule that classifies customers based on their data. Each segment is defined by conditions. Text evaluates every customer against each active segment definition automatically whenever the customer's data changes.

Every organization has two built-in segments, lead (ID `0`) and qualified lead (ID `1`). You can also [create custom segment definitions](/management/customer-data-platform-api#/paths/~1v1~1create_segment_definition/post).

<CodeResponse version="v3.7" type="agent" title={'Sample Segment Membership data structure'} json="segmentMembership"/>

| Field                        | Req./Opt. | Data type  | Notes                                                                                                                                                                                                                                                                                                |
| ---------------------------- | --------- | ---------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `segment_id`                 | required  | `number`   | The ID of the segment definition.                                                                                                                                                                                                                                                                    |
| `is_member`                  | required  | `bool`     | Whether the customer currently meets all conditions of the segment.                                                                                                                                                                                                                                  |
| `membership_last_updated_at` | optional  | `string`   | RFC 3339 datetime string; the time when `is_member` last changed. Returned only if the customer was a member of the segment at least once.                                                                                                                                                           |
| `membership_attribution`     | optional  | `[]string` | Account IDs of the agents credited with the customer joining the segment. Returned only when an agent's change added the customer to the segment.                                                                                                                                                    |
| `conditions_provenance`      | optional  | `object`   | An object where the keys are the names of the conditions the customer meets (for example, `email_set`) and the values are [Condition Provenance](#condition-provenance) objects. If the customer meets a segment condition, it will be returned even if the customer isn't a member of that segment. |

### Condition Provenance

| Field              | Req./Opt. | Data type | Notes                                                                                                                                                    |
| ------------------ | --------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `last_updated_at`  | required  | `string`  | RFC 3339 datetime string; the time when the condition was last met.                                                                                      |
| `agent_account_id` | optional  | `string`  | The account ID of the agent whose change made the customer meet the condition. Returned only when attributable to an agent.                              |
| `agent_client_id`  | optional  | `string`  | The client ID of the application that issued the agent token. Returned only when attributable to an agent.                                               |

# Other common structures

Apart from [Events](#events) and [Users](#users), there are also other common data structures you might work with. Those are:

- [Access](#access)
- [Chats](#chats)
- [Chat info](#chat-info)
- [Form fields](#form-fields)
- [Filled form fields](#filled-form-fields)
- [Properties](#properties)
- [Threads](#threads)
- [Deleted event](#deleted-event)

## Access

<CodeResponse version="v3.7" type="agent" title={'Sample Access data structure'} json="access"/>

| Field       | Req./Opt. |                                        Note |
| ----------- | :-------: | ------------------------------------------: |
| `group_ids` | required  | `group 0` means that all agents can see it. |

## Chats

<CodeResponse version="v3.7" type="agent" title={'Sample Chat data structure'} json="chat"/>

| Field        | Req./Opt. |      |
| ------------ | :-------: | ---: |
| `properties` | optional  |      |
| `access`     | optional  |      |

## Chat info

**Chat info** is similar to the **Chat** data structure. The difference is that **Chat** contains a `thread` object, while **Chat info** includes `last_thread_info`.

<CodeResponse version="v3.7" type="agent" title={'Sample Chat info data structure'} json="chatInfo"/>

## Form fields

A component of the [Form](#form) event.

<CodeResponse version="v3.7" type="agent" title={'Sample Form fields'} json="formFields"/>

| Field                  | Required | Data type          | Notes                                                                                                                                |
| ---------------------- | -------- | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------ |
| `fields`               | yes      | `array of objects` | The fields a form contains.                                                                                                          |
| `type`                 | yes      | `string`           | Possible values: `checkbox`, `email`, `name`, `question`, `subject`, `textarea`, `phone`, `date`, `group_chooser`, `radio`, `select` |
| `id`                   | yes      | `string`           | Field id, for all field types                                                                                                        |
| `label`                | yes      | `string`           | Field label; for all field types                                                                                                     |
| `customer_property_id` | no       | `string`           | The ID of the [customer property](#customer-property) to update when the customer submits the form.                                  |

## Filled form fields

A component of the [Filled form](#filled-form) event.

<CodeResponse version="v3.7" type="agent" title={'Sample Form fields'} json="filledFormFields"/>

| Field             | Required | Data type          |                                                                                                                                Notes |
| ----------------- | -------- | ------------------ | -----------------------------------------------------------------------------------------------------------------------------------: |
| `fields`          | yes      | `array of objects` |                                                                                                          The fields a form contains. |
| `type`            | yes      | `string`           | Possible values: `checkbox`, `email`, `name`, `question`, `subject`, `textarea`, `phone`, `date`, `group_chooser`, `radio`, `select` |
| `id`              | yes      | `string`           |                                                                                                        Field id, for all field types |
| `label`           | yes      | `string`           |                                                                                                     Field label; for all field types |
| `answer`          | yes      | `any`              |                                                                                                                  For all field types |
| `answer.id`       | yes      | `string`           |                                                             An identifier of each option a customer can choose. For all field types. |
| `answer.label`    | yes      | `string`           |                                                                                                    Answer label; for all field types |
| `answer.group_id` | yes      | `number`           |                                                                                                                  For `group_chooser` |

## Properties

Properties are **key-value storages**. They can be set within a chat, a thread, or an event. You can read more about properties in the [Configuration API](/management/configuration-api/#properties) document.

<CodeResponse version="v3.7" type="agent" title={'Sample Properties data structure'} json="properties"/>

## Threads

<CodeResponse version="v3.7" type="agent" title={'Sample Thread data structure'} json="thread"/>

| Field                           | Req./Opt. | Note                                                                                                                               |
| ------------------------------- | --------- | ---------------------------------------------------------------------------------------------------------------------------------- |
| `access`                        | optional  |                                                                                                                                    |
| `active`                        | required  | Possible values: `true` (thread is still active) or `false`(thread no longer active)                                               |
| `events`                        | optional  | Doesn't exists if `restricted_access` is present.                                                                                  |
| `properties`                    | optional  |                                                                                                                                    |
| `restricted_access`             | optional  | Contains the reason for access restriction.                                                                                        |
| `queue`                         | optional  | Present only if the chat is in the queue. The wait time for an available agent is approximated in seconds.                         |
| `previous_thread_id`            | optional  | Present only if there is a preceding thread.                                                                                       |
| `next_thread_id`                | optional  | Present only if there is a following thread.                                                                                       |
| `previous_accessible_thread_id` | optional  | Present only if there is a preceding thread accessible for the requester. Field present only in [`list_archives`](#list-archives). |
| `next_accessible_thread_id`     | optional  | Present only if there is a following thread accessible for the requester. Field present only in [`list_archives`](#list-archives). |
| `created_at`                    | required  | Date & time format with a resolution of microseconds, `UTC string`. Generated server-side.                                         |
| `tags`                          | optional  | An array of tags. Returned only if a thread was tagged.                                                                            |
| `customer_visit`                | optional  | Contains details about customer visit (IP, User agent and geolocation).                                                            |

## Deleted event

The **Deleted Event** is returned to agents with the `normal` role in place of the original event.

<CodeResponse version="v3.7" type="agent" title={'Sample Deleted event in response'} json="deletedEvent"/>

| Field        | Returned   | Notes                                                               |
| ------------ | ---------- | ------------------------------------------------------------------- |
| `id`         | always     |                                                                     |
| `created_at` | always     | Date & time format with a resolution of microseconds, `UTC string`. |
| `type`       | always     | The original event type.                                            |
| `visibility` | always     |                                                                     |
| `deleted`    | always     |                                                                     |
| `author_id`  | optionally |                                                                     |
| `custom_id`  | optionally |                                                                     |
